--- a/hammare.html
+++ b/hammare.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stickans Uthyrning</title>
+    <title>Hammare - Stickans Uthyrning</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet">
@@ -23,15 +23,16 @@
     <div class="container">
         <aside class="sidebar">
 
-            <a href="oversikt.html">Översikt</a>
-            <a href="kvitto.html">Kvitto</a>
+            <a href="#">Översikt</a>
+            <a href="#">Kvitto</a>
         </aside>
-        <main class="main-content">
-            <a href="skruvmejsel.html">Skruvmejsel</a>
-            <a href="hammare.html">Hammare</a>
-            <a href="sag.html">Såg</a>
-        </main>
-    </div>
+    
+
+    <main class="main-content">
+        <h2>Hammare</h2>
+        <!-- Content specific to the Hammare product -->
+    </main>
+
     <footer class="footer">
         <div class="footer-section">
             <h2>Kontakt</h2>
@@ -52,5 +53,7 @@
             <a href="#">*C</a>
         </div>
     </footer>
+
+    <!-- Footer same as in previous examples -->
 </body>
 </html>
