--- a/skruvmejsel.html
+++ b/skruvmejsel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stickans Uthyrning</title>
+    <title>Skruvmejsel - Stickans Uthyrning</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet">
@@ -23,33 +23,41 @@
     <div class="container">
         <aside class="sidebar">
 
-            <a href="oversikt.html">Översikt</a>
-            <a href="kvitto.html">Kvitto</a>
+            <a href="#">Översikt</a>
+            <a href="#">Kvitto</a>
         </aside>
-        <main class="main-content">
-            <a href="skruvmejsel.html">Skruvmejsel</a>
-            <a href="hammare.html">Hammare</a>
-            <a href="sag.html">Såg</a>
-        </main>
-    </div>
+
+    <main class="main-content">
+        <h2>Skruvmejsel</h2>
+        <img src="skruvmejsel.jpg" alt="Skruvmejsel" class="product-image">
+        <p>13 i lager</p>
+        <div class="booking">
+            <label for="from">Från:</label>
+            <input type="date" id="from" name="from">
+            <label for="to">Till:</label>
+            <input type="date" id="to" name="to">
+            <button type="submit">Boka Nu</button>
+        </div>
+    </main>
+
     <footer class="footer">
         <div class="footer-section">
             <h2>Kontakt</h2>
-            <a href="#">*A</a>
-            <a href="#">*B</a>
-            <a href="#">*C</a>
+            <p>*A</p>
+            <p>*B</p>
+            <p>*C</p>
         </div>
         <div class="footer-section">
             <h2>Produkter</h2>
-            <a href="#">*A</a>
-            <a href="#">*B</a>
-            <a href="#">*C</a>
+            <p>*A</p>
+            <p>*B</p>
+            <p>*C</p>
         </div>
         <div class="footer-section">
             <h2>Om Oss</h2>
-            <a href="#">*A</a>
-            <a href="#">*B</a>
-            <a href="#">*C</a>
+            <p>*A</p>
+            <p>*B</p>
+            <p>*C</p>
         </div>
     </footer>
 </body>
