--- a/skruvmejsel.html
+++ b/skruvmejsel.html
@@ -29,7 +29,7 @@
 
     <main class="main-content">
         <h2>Skruvmejsel</h2>
-        <img src="skruvmejsel.jpg" alt="Skruvmejsel" class="product-image">
+        <img src="skruvmejsel.avif" alt="Skruvmejsel" class="product-image">
         <p>13 i lager</p>
         <div class="booking">
             <label for="from">Från:</label>
