--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./Component/component.css">
 </head>
 <body>
     <header class="header">
-        <!-- Wrap the h1 tag with an a tag linking to index.html -->
         <a href="index.html" class="header-logo">
             <h1>Stickans Uthyrning</h1>
         </a>
@@ -19,13 +19,12 @@
             <button>Log in</button>
         </nav>
     </header>
-    
-    <div class="container">
-        <aside class="sidebar">
+    <div class="sidebar">
+        <a href="oversikt.html">Översikt</a>
+        <a href="kvitto.html">Kvitto</a>
+    </div>
 
-            <a href="oversikt.html">Översikt</a>
-            <a href="kvitto.html">Kvitto</a>
-        </aside>
+    <div class="container">
         <main class="main-content">
             <a href="skruvmejsel.html">Skruvmejsel</a>
             <a href="hammare.html">Hammare</a>
